# duckduckgo-cli

./: README.md  TODO.md  continuous-deployment.sh  dev-requirements.txt  docs.py  pyproject.toml
.github/workflows/: cd.yml  docs.yml  test.yml
src/duckduckgo_cli/: main.py
tests/: test_main.py
workflows/: cd.yml  docs.yml
